<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNovo"
        style="@style/ToolbarVerde"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@android:drawable/ic_menu_close_clear_cancel"
        app:title="@string/novo_titulo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/hint_nome"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edtCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:hint="@string/hint_categoria"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edtPreco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:hint="@string/hint_preco"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/edtObservacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:gravity="top"
                android:hint="@string/hint_observacao"
                android:inputType="textMultiLine"
                android:minLines="3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/verde_escuro"
                android:text="@string/salvar"
                android:textColor="@color/branco" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
